--- a/frontend/src/assets/css/fonts.css
+++ b/frontend/src/assets/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'HoonWhitecatR';
-    src: local('HoonWhitecatR'),
-        url('../fonts/hoonwhitecatr.woff2') format('woff2'),
-        url('../fonts/hoonwhitecatr.woff') format('woff'),
-        url('../fonts/hoonwhitecatr.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    /* unicode-range: U+AC00-U+D7A3; */
+  font-family: "HoonWhitecatR";
+  src: local("HoonWhitecatR"),
+    url("../fonts/hoonwhitecatr.woff2") format("woff2"),
+    url("../fonts/hoonwhitecatr.woff") format("woff");
+  /* url('../fonts/hoonwhitecatr.ttf') format('truetype'); */
+  font-weight: normal;
+  font-style: normal;
+  /* unicode-range: U+AC00-U+D7A3; */
 }
