[FE] Update animalList | S03P31B306-125

--- a/frontend/src/assets/css/Card.scss
+++ b/frontend/src/assets/css/Card.scss
@@ -20,7 +20,6 @@ h1 {
 // base
 .flip {
     position: relative;
-    margin: 10px;
     >.front,
     >.back {
         display: block;
@@ -74,7 +73,7 @@ h1 {
       p {
         font-size: 0.9125rem;
         line-height: 160%;
-        color: #999;
+        color: #ffffff;
         margin-bottom: 0;
       }
     }
