--- a/frontend/src/assets/css/survey.css
+++ b/frontend/src/assets/css/survey.css
@@ -18,6 +18,9 @@
     cursor: pointer;
     padding: 0;
   }
+  .answer-img:hover {
+    opacity: 0.8;
+  }
   .img-num {
     padding-top: 5px; 
     text-align: left; 
@@ -27,5 +30,8 @@
     cursor: pointer; 
     display: flex; 
     justify-content: space-around; 
-    margin: 10px; 
+    margin: 10px;
+  }
+  .answer:hover {
+    opacity: 0.8;
   }
